--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,9 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
-.idea/*
+rustybeam/.idea/*
 
 *.xml
 .iml
+
 
